# gha-clone-releases

./: .all-contributorsrc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  DEVELOPER.md  Dockerfile  Makefile  README.md  action.yml  main.py  noxfile.py  package-requirements.txt  pyproject.toml
.github/actions/: codeql.yml
.github/scripts/: replace_inputs.sh
.github/workflows/: codeql.yml  generate-docs.yml  integration.yml  lint.yml  python-ci.yml  python.yml  release.yml  test-docker-image.yml
Docker/: ActionDockerfile.j2  Dockerfile
Docker/builder/rootfs/: requirements.txt
gha_clone_releases/: main.py
gha_clone_releases/utils/: assets.py  releases.py
tests/unit/: test_clone_releases.py
