[tool.poetry]
name = "gha-clone-releases"
version = "1.8.1"
description = "Github Action to clone releases from one repo to another"
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gha_clone_releases"}]

[tool.poetry.scripts]
clone-releases = "gha_clone_releases.main:main"

[tool.poetry.dependencies]
python = "^3.11"
actions-toolkit = "^0.1.15"
pygithub = "^1.59.1"
packaging = "^23.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
bandit = "^1.7.5"
mypy = "^1.5.1"
pre-commit-hooks = "^4.4.0"
reorder-python-imports = "^3.10.0"
pytest-xdist = "^3.3.1"
ruff = ">=0.0.261,<0.0.285"
pre-commit = "^3.3.3"
pyupgrade = "^3.10.1"
pyflakes = "^3.1.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests", "noxfile.py", ".github/scripts"]


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
addopts = "-n 4  --cov=gha_clone_releases --cov-report xml:.coverage.xml --cov-report=term-missing"
